rocket-app-v0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-v0
spec:
  selector:
    matchLabels:
      app: app-v0
  replicas: 1 
  template:
    metadata:
      labels:
        app: app-v0
    spec:
      containers:
      - name: app-v0
        image: ratulb/rocket-app-v0:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service-v0
spec:
  selector:
    app: app-v0
  type: ClusterIP
  ports:
  - name: service-port
    protocol: TCP
    port: 8080
    targetPort: 8080
