rocket-app-v0/istio-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: default-backend-v0
spec:
  #ingressClassName: istio
  rules:
  - http:
      paths:
      - path: /.*
        pathType: ImplementationSpecific #Prefix does not work
        backend:
          service:
            name: service-v0
            port:
              number: 8080
