rocket-app-v0/nginx-default-backend.yaml
#k8s default ingress backend - works with nginx ingress but not with istio
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: default-backend-v0
spec:
  defaultBackend:
    service:
      name: service-v0
      port: 
        number: 8080
  #ingressClassName: nginx
---
